tests/generics/sum_type_nonexhaustive.diag
sum_type_nonexhaustive.ax:1:1: error: return type mismatch: expected 10, found 0
sum_type_nonexhaustive.ax:1:1: error: return type mismatch: expected 10, found 0
