tests/generics/sum_type_nonexhaustive.ax
type Shape = Circle(f64) | Rect(f64) | Triangle(f64)

fn area(s: Shape) -> f64:
    match s:
        Circle(r):
            return r
        Rect(w):
            return w
